--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 to strengthen
                 your ability to focus</p>
 
-            <a class="button-link" target="blank" href="linkedin.com">Explore now</a><br><br>
+            <a class="link-button" target="blank" href="linkedin.com">Explore now</a><br><br>
             Scrool down to explore more about us<br><br>
         </div>
         <div class="stay-focus">
@@ -85,8 +85,31 @@
                 reasons.”<br>
                 ― Chrissie Wellington, A Life Without Limits. Chrissie Wellington with Michael Aylwin
             </p>
+            <a class=link-button target="blank" href="www.linkedin.com/in/ 
+            putul-sarkar">Read the documentation</a>
         </div>
 
+    </section>
+    <section class="global-community">
+        <div class="global-pera">
+            <h2>Know <BR>Our Global Community</h2>
+            <p>“Pick your battles, and accept yourself for who you are.”
+                ― Chrissie Wellington<br>
+                “Some sessions are stars and some sessions are stones,
+                but in the end they are all rocks and we <br>
+                build upon them.”― Chrissie Wellington<br>
+                “Just seize every opportunity you have, embrace every experience. Make a mark, for all the right
+                reasons.”<br>
+                ― Chrissie Wellington, A Life Without Limits. Chrissie Wellington with Michael Aylwin
+            </p>
+            <a class=link-button target="blank" href="www.linkedin.com/in/ 
+                putul-sarkar">Read the documentation</a>
+
+        </div>
+        <div class=" project">
+            <img src="images/pictures/rsz_project.png" alt="coding">
+
+        </div>
     </section>
 
 
