--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
         <div class="mission-one">
             <img src="images/illustrators/rsz_1illustrator-1.png">
             <h3>Mission</h3>
-            <p> I have sbeen working as a frelance web designer<br>
-                and front-end developer.I’ve always been someone<br>
-                who both a creative and a logical side. When I <br>
-                discovered web design in college, I realized it would be the
-                perfect fit</p>
+            <p>Reaching your goal is a long journey, and a million things<br>
+                are waiting
+                to distract you. It takes time and determination <br>
+                to strengthen
+                your ability to focus</p>
         </div>
         <div class="mission-two">
             <img src="images/illustrators/rsz_2illustrator-2.png">
             <h3>Vision</h3>
-            <p> I have sbeen working as a frelance web designer<br>
-                and front-end developer.I’ve always been someone<br>
-                who both a creative and a logical side. When I <br>
-                discovered web design in college, I realized it would be the
-                perfect fit</p>
+            <p>Reaching your goal is a long journey, and a million things<br>
+                are waiting
+                to distract you. It takes time and determination <br>
+                to strengthen
+                your ability to focus</p>
         </div>
         <div class="mission-three">
             <img src="images/illustrators/rsz_illustrator-3.png">
             <h3>Goal</h3>
-            <p> I have sbeen working as a frelance web designer<br>
-                and front-end developer.I’ve always been someone<br>
-                who both a creative and a logical side. When I <br>
-                discovered web design in college, I realized it would be the
-                perfect fit</p>
+            <p>Reaching your goal is a long journey, and a million things<br>
+                are waiting
+                to distract you. It takes time and determination <br>
+                to strengthen
+                your ability to focus</p>
         </div>
 
 
@@ -109,6 +109,12 @@
         <div class=" project">
             <img src="images/pictures/rsz_project.png" alt="coding">
 
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer-text">
+            <h3> <i>Mission </i> <span class="orange-color">2022</span></h3>
+            <p>Hardwork, Perseveranceand Determination for 2022</p>
         </div>
     </section>
 
